examples/Passing/If/simple7.c
int main() {
	if (0) return 5;
	return 100;
}
