examples/Failing/Binary/fail_divide.c
int main () {
    return 5 / 0;
}
